--- a/sonar-test.yaml
+++ b/sonar-test.yaml
@@ -2,16 +2,16 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: tzl-poc
 
 steps:
 - task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
   inputs:
-    SonarCloud: 'SonarQubeServiceConnectionName' # Adım 2'de oluşturduğunuz Service Connection ismini kullanın
-    organization: 'your-organization-name'  # Eğer SonarCloud kullanıyorsanız bu satırı ve organization değerini ekleyin.
+    SonarCloud: 'sonar-furkan-deneme' # Adım 2'de oluşturduğunuz Service Connection ismini kullanın
+    organization: 'VFGroup-TaaS-Tenants-1'  # Eğer SonarCloud kullanıyorsanız bu satırı ve organization değerini ekleyin.
     scannerMode: 'CLI'
     configMode: 'manual'
-    cliProjectKey: 'your_project_key'
+#    cliProjectKey: 'your_project_key'
     cliSources: '.'
 
 - script: |
