--- a/sonar-test.yaml
+++ b/sonar-test.yaml
@@ -7,8 +7,8 @@ pool:
 steps:
 - task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
   inputs:
-    SonarCloud: 'sonar-furkan-deneme' # Adım 2'de oluşturduğunuz Service Connection ismini kullanın
-    organization: 'VFGroup-TaaS-Tenants-1'  # Eğer SonarCloud kullanıyorsanız bu satırı ve organization değerini ekleyin.
+    SonarCloud: 'sonar-furkan-deneme' 
+    organization: 'VFGroup-TaaS-Tenants-1'  
     scannerMode: 'CLI'
     configMode: 'manual'
 #    cliProjectKey: 'your_project_key'
