--- a/sonar-test.yaml
+++ b/sonar-test.yaml
@@ -5,21 +5,19 @@ pool:
   name: tzl-poc
 
 steps:
-- task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
+- task: SonarQubePrepare@4
   inputs:
-    SonarCloud: 'sonar-furkan-deneme' 
-    organization: 'VFGroup-TaaS-Tenants-1'  
+    SonarQube: 'sonar-furkan-deneme'  # Adım 1'de oluşturduğunuz Service Connection ismini kullanın
     scannerMode: 'CLI'
     configMode: 'manual'
 #    cliProjectKey: 'your_project_key'
     cliSources: '.'
 
-- script: |
-    echo 'Burada kodunuzu build etme ve test etme adımlarını ekleyin.'
-  displayName: 'Build and Test'
+- script: echo 'Kod taraması başlatılıyor...'
+  displayName: 'Echo'
 
-- task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
+- task: SonarQubeAnalyze@4
 
-- task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
+- task: SonarQubePublish@4
   inputs:
     pollingTimeoutSec: '300'
