--- a/sonar-test.yaml
+++ b/sonar-test.yaml
@@ -20,6 +20,11 @@ steps:
   inputs:
     jdkversion: 'JAVA_HOME_11_X64'
 
+- task: SonarQubeAnalyze@5
+  inputs:
+    jdkversion: 'JAVA_HOME'
+
+
 - task: SonarQubePublish@5
   inputs:
     pollingTimeoutSec: '300'
